# deskbridge

./: CHANGELOG.md  README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: kvm.rs  lib.rs  main.rs  mdns.rs  p2p.rs
